<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context="com.example.ebreadshop.menuManagement.CRUDFoodActivity">

        <Button
            android:id="@+id/edit_img_crud"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/button_styles"
            android:radius="30dp"
            android:text="@string/edit_image"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_val_crud" />

        <Button
            android:id="@+id/cancel_crud"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:background="@drawable/button_styles_1"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/delete_crud"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/update_crud"
            android:layout_width="165dp"
            android:layout_height="0dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/button_styles_3"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_img_crud"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/delete_crud"
            android:layout_width="165dp"
            android:layout_height="45dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_styles_2"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_img_crud" />

        <EditText
            android:id="@+id/name_val_crud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/chocolate_cake"
            android:inputType="textPersonName"
            android:text="@string/chocolate_cake"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_crud"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/desc_val_crud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/no_description"
            android:inputType="textMultiLine"
            android:text="@string/no_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_crud"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/unit_price_val_crud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_100_00"
            android:inputType="numberDecimal"
            android:text="@string/_100_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unit_price_crud"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/discount_val_crud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_20_00"
            android:inputType="numberDecimal"
            android:text="@string/_20_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discount_crud"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/title_crud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="24dp"
            android:text="@string/chocolate_cake"
            android:textAllCaps="true"
            android:textColor="#F5F14134"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_crud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_crud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/name_val_crud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_crud"
            tools:text="Name" />

        <TextView
            android:id="@+id/discount_crud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1dp"
            android:text="@string/discount"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/discount_val_crud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unit_price_val_crud" />

        <TextView
            android:id="@+id/unit_price_crud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/unit_price_val_crud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_val_crud" />

        <TextView
            android:id="@+id/description_crud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/desc_val_crud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discount_val_crud"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
